--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,5 +29,5 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:support-v4:25.3.1'
     testCompile 'junit:junit:4.12'
-    compile files('D:/2PT/WhatsNext/lib/libs/joda-time-2.9.9.jar')
+    compile 'joda-time:joda-time:+'
 }
